:wrench: translations added to CMS

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -771,6 +771,226 @@ collections:
                     name: 'url'
                     widget: 'string'
 
+          - label: 'Banner principal'
+            name: 'welcome'
+            widget: 'object'
+            fields:
+              - label: 'Título'
+                name: 'title'
+                widget: 'string'
+
+              - label: 'Lead'
+                name: 'lead'
+                widget: 'text'
+
+              - label: 'Botão primário'
+                name: 'primaryButton'
+                widget: 'object'
+                fields:
+                  - label: 'Rótulo'
+                    name: 'label'
+                    widget: 'string'
+
+                  - label: 'URL'
+                    name: 'url'
+                    widget: 'string'
+
+              - label: 'Botão fantasma'
+                name: 'ghostButton'
+                widget: 'object'
+                fields:
+                  - label: 'Rótulo'
+                    name: 'label'
+                    widget: 'string'
+
+                  - label: 'URL'
+                    name: 'url'
+                    widget: 'string'
+
+          - label: 'Serviços'
+            name: 'services'
+            widget: 'object'
+            fields:
+              - label: 'Título'
+                name: 'title'
+                widget: 'string'
+
+              - label: 'Primeiro item'
+                name: 'firstItem'
+                widget: 'object'
+                fields:
+                  - label: 'Título'
+                    name: 'title'
+                    widget: 'string'
+
+                  - label: 'Conteúdo'
+                    name: 'content'
+                    widget: 'text'
+
+              - label: 'Segundo item'
+                name: 'secondItem'
+                widget: 'object'
+                fields:
+                  - label: 'Título'
+                    name: 'title'
+                    widget: 'string'
+
+                  - label: 'Conteúdo'
+                    name: 'content'
+                    widget: 'text'
+
+              - label: 'Terceiro item'
+                name: 'thirdItem'
+                widget: 'object'
+                fields:
+                  - label: 'Título'
+                    name: 'title'
+                    widget: 'string'
+
+                  - label: 'Conteúdo'
+                    name: 'content'
+                    widget: 'text'
+
+              - label: 'Quarto item'
+                name: 'fourthItem'
+                widget: 'object'
+                fields:
+                  - label: 'Título'
+                    name: 'title'
+                    widget: 'string'
+
+                  - label: 'Conteúdo'
+                    name: 'content'
+                    widget: 'text'
+
+              - label: 'Botão'
+                name: 'button'
+                widget: 'object'
+                fields:
+                  - label: 'Rótulo'
+                    name: 'label'
+                    widget: 'string'
+
+                  - label: 'URL'
+                    name: 'url'
+                    widget: 'string'
+
+          - label: 'Portfólio'
+            name: 'portfolio'
+            widget: 'object'
+            fields:
+              - label: 'Título'
+                name: 'title'
+                widget: 'string'
+
+              - label: 'Itens'
+                name: 'items'
+                widget: 'object'
+                fields:
+                  - label: 'All'
+                    name: 'all'
+                    widget: 'string'
+
+                  - label: 'Web design'
+                    name: 'webDesign'
+                    widget: 'string'
+
+                  - label: 'Branding'
+                    name: 'branding'
+                    widget: 'string'
+
+                  - label: 'Social media'
+                    name: 'socialMedia'
+                    widget: 'string'
+
+                  - label: 'Audiovisual'
+                    name: 'audiovisual'
+                    widget: 'string'
+
+              - label: 'Botão'
+                name: 'button'
+                widget: 'object'
+                fields:
+                  - label: 'Rótulo'
+                    name: 'label'
+                    widget: 'string'
+
+                  - label: 'URL'
+                    name: 'url'
+                    widget: 'string'
+
+              - label: 'Página dos itens'
+                name: 'itemPage'
+                widget: 'object'
+                fields:
+                  - label: 'Categoria'
+                    name: 'role'
+                    widget: 'string'
+
+                  - label: 'Equipe'
+                    name: 'team'
+                    widget: 'string'
+
+                  - label: 'Data de finalização'
+                    name: 'finishedDate'
+                    widget: 'string'
+
+          - label: 'Sobre nós'
+            name: 'about'
+            widget: 'object'
+            fields:
+              - label: 'Título'
+                name: 'title'
+                widget: 'string'
+
+              - label: 'Botão'
+                name: 'button'
+                widget: 'object'
+                fields:
+                  - label: 'Rótulo'
+                    name: 'label'
+                    widget: 'string'
+
+                  - label: 'URL'
+                    name: 'url'
+                    widget: 'string'
+
+          - label: 'Contato'
+            name: 'contact'
+            widget: 'object'
+            fields:
+              - label: 'Título'
+                name: 'title'
+                widget: 'string'
+
+              - label: 'Formulário'
+                name: 'form'
+                widget: 'object'
+                fields:
+                  - label: 'Título'
+                    name: 'title'
+                    widget: 'string'
+
+                  - label: 'Nome'
+                    name: 'name'
+                    widget: 'string'
+
+                  - label: 'Email'
+                    name: 'email'
+                    widget: 'string'
+
+                  - label: 'Mensagem'
+                    name: 'message'
+                    widget: 'string'
+
+                  - label: 'Botão'
+                    name: 'button'
+                    widget: 'string'
+
+                  - label: 'Mensagem de sucesso'
+                    name: 'success'
+                    widget: 'string'
+
       - file: 'src/locales/es/translation.json'
         label: 'Textos em espanhol'
         name: 'es'
@@ -856,6 +1076,226 @@ collections:
                     name: 'url'
                     widget: 'string'
 
+          - label: 'Banner principal'
+            name: 'welcome'
+            widget: 'object'
+            fields:
+              - label: 'Título'
+                name: 'title'
+                widget: 'string'
+
+              - label: 'Lead'
+                name: 'lead'
+                widget: 'text'
+
+              - label: 'Botão primário'
+                name: 'primaryButton'
+                widget: 'object'
+                fields:
+                  - label: 'Rótulo'
+                    name: 'label'
+                    widget: 'string'
+
+                  - label: 'URL'
+                    name: 'url'
+                    widget: 'string'
+
+              - label: 'Botão fantasma'
+                name: 'ghostButton'
+                widget: 'object'
+                fields:
+                  - label: 'Rótulo'
+                    name: 'label'
+                    widget: 'string'
+
+                  - label: 'URL'
+                    name: 'url'
+                    widget: 'string'
+
+          - label: 'Serviços'
+            name: 'services'
+            widget: 'object'
+            fields:
+              - label: 'Título'
+                name: 'title'
+                widget: 'string'
+
+              - label: 'Primeiro item'
+                name: 'firstItem'
+                widget: 'object'
+                fields:
+                  - label: 'Título'
+                    name: 'title'
+                    widget: 'string'
+
+                  - label: 'Conteúdo'
+                    name: 'content'
+                    widget: 'text'
+
+              - label: 'Segundo item'
+                name: 'secondItem'
+                widget: 'object'
+                fields:
+                  - label: 'Título'
+                    name: 'title'
+                    widget: 'string'
+
+                  - label: 'Conteúdo'
+                    name: 'content'
+                    widget: 'text'
+
+              - label: 'Terceiro item'
+                name: 'thirdItem'
+                widget: 'object'
+                fields:
+                  - label: 'Título'
+                    name: 'title'
+                    widget: 'string'
+
+                  - label: 'Conteúdo'
+                    name: 'content'
+                    widget: 'text'
+
+              - label: 'Quarto item'
+                name: 'fourthItem'
+                widget: 'object'
+                fields:
+                  - label: 'Título'
+                    name: 'title'
+                    widget: 'string'
+
+                  - label: 'Conteúdo'
+                    name: 'content'
+                    widget: 'text'
+
+              - label: 'Botão'
+                name: 'button'
+                widget: 'object'
+                fields:
+                  - label: 'Rótulo'
+                    name: 'label'
+                    widget: 'string'
+
+                  - label: 'URL'
+                    name: 'url'
+                    widget: 'string'
+
+          - label: 'Portfólio'
+            name: 'portfolio'
+            widget: 'object'
+            fields:
+              - label: 'Título'
+                name: 'title'
+                widget: 'string'
+
+              - label: 'Itens'
+                name: 'items'
+                widget: 'object'
+                fields:
+                  - label: 'All'
+                    name: 'all'
+                    widget: 'string'
+
+                  - label: 'Web design'
+                    name: 'webDesign'
+                    widget: 'string'
+
+                  - label: 'Branding'
+                    name: 'branding'
+                    widget: 'string'
+
+                  - label: 'Social media'
+                    name: 'socialMedia'
+                    widget: 'string'
+
+                  - label: 'Audiovisual'
+                    name: 'audiovisual'
+                    widget: 'string'
+
+              - label: 'Botão'
+                name: 'button'
+                widget: 'object'
+                fields:
+                  - label: 'Rótulo'
+                    name: 'label'
+                    widget: 'string'
+
+                  - label: 'URL'
+                    name: 'url'
+                    widget: 'string'
+
+              - label: 'Página dos itens'
+                name: 'itemPage'
+                widget: 'object'
+                fields:
+                  - label: 'Categoria'
+                    name: 'role'
+                    widget: 'string'
+
+                  - label: 'Equipe'
+                    name: 'team'
+                    widget: 'string'
+
+                  - label: 'Data de finalização'
+                    name: 'finishedDate'
+                    widget: 'string'
+
+          - label: 'Sobre nós'
+            name: 'about'
+            widget: 'object'
+            fields:
+              - label: 'Título'
+                name: 'title'
+                widget: 'string'
+
+              - label: 'Botão'
+                name: 'button'
+                widget: 'object'
+                fields:
+                  - label: 'Rótulo'
+                    name: 'label'
+                    widget: 'string'
+
+                  - label: 'URL'
+                    name: 'url'
+                    widget: 'string'
+
+          - label: 'Contato'
+            name: 'contact'
+            widget: 'object'
+            fields:
+              - label: 'Título'
+                name: 'title'
+                widget: 'string'
+
+              - label: 'Formulário'
+                name: 'form'
+                widget: 'object'
+                fields:
+                  - label: 'Título'
+                    name: 'title'
+                    widget: 'string'
+
+                  - label: 'Nome'
+                    name: 'name'
+                    widget: 'string'
+
+                  - label: 'Email'
+                    name: 'email'
+                    widget: 'string'
+
+                  - label: 'Mensagem'
+                    name: 'message'
+                    widget: 'string'
+
+                  - label: 'Botão'
+                    name: 'button'
+                    widget: 'string'
+
+                  - label: 'Mensagem de sucesso'
+                    name: 'success'
+                    widget: 'string'
+
       - file: 'src/locales/pt/translation.json'
         label: 'Textos em português'
         name: 'pt'
@@ -939,4 +1379,224 @@ collections:
 
                   - label: 'URL'
                     name: 'url'
+                    widget: 'string'
+
+          - label: 'Banner principal'
+            name: 'welcome'
+            widget: 'object'
+            fields:
+              - label: 'Título'
+                name: 'title'
+                widget: 'string'
+
+              - label: 'Lead'
+                name: 'lead'
+                widget: 'text'
+
+              - label: 'Botão primário'
+                name: 'primaryButton'
+                widget: 'object'
+                fields:
+                  - label: 'Rótulo'
+                    name: 'label'
+                    widget: 'string'
+
+                  - label: 'URL'
+                    name: 'url'
+                    widget: 'string'
+
+              - label: 'Botão fantasma'
+                name: 'ghostButton'
+                widget: 'object'
+                fields:
+                  - label: 'Rótulo'
+                    name: 'label'
+                    widget: 'string'
+
+                  - label: 'URL'
+                    name: 'url'
+                    widget: 'string'
+
+          - label: 'Serviços'
+            name: 'services'
+            widget: 'object'
+            fields:
+              - label: 'Título'
+                name: 'title'
+                widget: 'string'
+
+              - label: 'Primeiro item'
+                name: 'firstItem'
+                widget: 'object'
+                fields:
+                  - label: 'Título'
+                    name: 'title'
+                    widget: 'string'
+
+                  - label: 'Conteúdo'
+                    name: 'content'
+                    widget: 'text'
+
+              - label: 'Segundo item'
+                name: 'secondItem'
+                widget: 'object'
+                fields:
+                  - label: 'Título'
+                    name: 'title'
+                    widget: 'string'
+
+                  - label: 'Conteúdo'
+                    name: 'content'
+                    widget: 'text'
+
+              - label: 'Terceiro item'
+                name: 'thirdItem'
+                widget: 'object'
+                fields:
+                  - label: 'Título'
+                    name: 'title'
+                    widget: 'string'
+
+                  - label: 'Conteúdo'
+                    name: 'content'
+                    widget: 'text'
+
+              - label: 'Quarto item'
+                name: 'fourthItem'
+                widget: 'object'
+                fields:
+                  - label: 'Título'
+                    name: 'title'
+                    widget: 'string'
+
+                  - label: 'Conteúdo'
+                    name: 'content'
+                    widget: 'text'
+
+              - label: 'Botão'
+                name: 'button'
+                widget: 'object'
+                fields:
+                  - label: 'Rótulo'
+                    name: 'label'
+                    widget: 'string'
+
+                  - label: 'URL'
+                    name: 'url'
+                    widget: 'string'
+
+          - label: 'Portfólio'
+            name: 'portfolio'
+            widget: 'object'
+            fields:
+              - label: 'Título'
+                name: 'title'
+                widget: 'string'
+
+              - label: 'Itens'
+                name: 'items'
+                widget: 'object'
+                fields:
+                  - label: 'All'
+                    name: 'all'
+                    widget: 'string'
+
+                  - label: 'Web design'
+                    name: 'webDesign'
+                    widget: 'string'
+
+                  - label: 'Branding'
+                    name: 'branding'
+                    widget: 'string'
+
+                  - label: 'Social media'
+                    name: 'socialMedia'
+                    widget: 'string'
+
+                  - label: 'Audiovisual'
+                    name: 'audiovisual'
+                    widget: 'string'
+
+              - label: 'Botão'
+                name: 'button'
+                widget: 'object'
+                fields:
+                  - label: 'Rótulo'
+                    name: 'label'
+                    widget: 'string'
+
+                  - label: 'URL'
+                    name: 'url'
+                    widget: 'string'
+
+              - label: 'Página dos itens'
+                name: 'itemPage'
+                widget: 'object'
+                fields:
+                  - label: 'Categoria'
+                    name: 'role'
+                    widget: 'string'
+
+                  - label: 'Equipe'
+                    name: 'team'
+                    widget: 'string'
+
+                  - label: 'Data de finalização'
+                    name: 'finishedDate'
+                    widget: 'string'
+
+          - label: 'Sobre nós'
+            name: 'about'
+            widget: 'object'
+            fields:
+              - label: 'Título'
+                name: 'title'
+                widget: 'string'
+
+              - label: 'Botão'
+                name: 'button'
+                widget: 'object'
+                fields:
+                  - label: 'Rótulo'
+                    name: 'label'
+                    widget: 'string'
+
+                  - label: 'URL'
+                    name: 'url'
+                    widget: 'string'
+
+          - label: 'Contato'
+            name: 'contact'
+            widget: 'object'
+            fields:
+              - label: 'Título'
+                name: 'title'
+                widget: 'string'
+
+              - label: 'Formulário'
+                name: 'form'
+                widget: 'object'
+                fields:
+                  - label: 'Título'
+                    name: 'title'
+                    widget: 'string'
+
+                  - label: 'Nome'
+                    name: 'name'
+                    widget: 'string'
+
+                  - label: 'Email'
+                    name: 'email'
+                    widget: 'string'
+
+                  - label: 'Mensagem'
+                    name: 'message'
+                    widget: 'string'
+
+                  - label: 'Botão'
+                    name: 'button'
+                    widget: 'string'
+
+                  - label: 'Mensagem de sucesso'
+                    name: 'success'
                     widget: 'string'
