:wrench: tailor the CMS configuration file
tailor the CMS configuration file to reflect changes from the previous commit

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -518,8 +518,8 @@ collections:
     editor:
       preview: false
     fields:
-      - label: 'templateKey'
-        name: 'templateKey'
+      - label: 'key'
+        name: 'key'
         widget: 'hidden'
         default: 'team'
 
