:lipstick: prepares to merge with the master

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,7 +1,7 @@
 backend:
   name: github
   repo: marscollective/marscollective.co
-  branch: dev
+  branch: master
 
   commit_messages:
     create: ':pencil: create “{{path}}”'
