:construction_worker: improves local building scripts

--- a/package.json
+++ b/package.json
@@ -48,10 +48,11 @@
   "scripts": {
     "build": "GATSBY_EXPERIMENTAL_PAGE_BUILD_ON_DATA_CHANGES=true gatsby build --log-pages",
     "develop": "gatsby develop",
-    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
-    "start": "npm run develop",
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md,yml}\"",
+    "start": "gatsby develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "deploy": "yarn build && netlify deploy -p"
+    "stage": "netlify build && netlify deploy",
+    "deploy": "yarn stage -p"
   }
 }
