:bug: remove site description of the json object
this change was necessary in order not to break the build process of Gatsby@2.24.62

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -663,21 +663,17 @@ collections:
             name: 'shortTitle'
             widget: 'string'
 
-          - label: 'Descrição'
+          - label: 'Descrição em inglês'
             name: 'description'
-            widget: 'object'
-            fields:
-              - label: 'Em inglês'
-                name: 'en'
-                widget: 'text'
+            widget: 'text'
 
-              - label: 'Em espanhol'
-                name: 'es'
-                widget: 'text'
+          - label: 'Descrição em espanhol'
+            name: 'descES'
+            widget: 'text'
 
-              - label: 'Em português'
-                name: 'pt'
-                widget: 'text'
+          - label: 'Descrição em português'
+            name: 'descPT'
+            widget: 'text'
 
       - file: 'README.md'
         label: 'Readme do repositório'
