--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "styled-components": "^5.2.0"
   },
   "devDependencies": {
-    "prettier": "2.1.2"
+    "husky": "^4.3.0",
+    "prettier": "2.1.2",
+    "pretty-quick": "^3.0.2"
   },
   "license": "MIT",
   "scripts": {
@@ -54,5 +56,10 @@
     "clean": "gatsby clean",
     "stage": "netlify build && netlify deploy",
     "deploy": "yarn stage -p"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
   }
 }
