--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,9 +1,14 @@
 name: Test and merge
-on: [pull_request]
+on:
+  pull_request:
+    branches:
+      - main
 
 jobs:
-  test:
-    runs-on: ubuntu-16.04
+  test-and-merge:
+    name: Test and merge
+    runs-on: ubuntu-latest
+
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
@@ -14,10 +19,10 @@ jobs:
           node-version: 12.x
 
       - name: Install dependencies
-        run: yarn install && npm i -g gatsby-cli
+        run: yarn --frozen-lockfile
 
-      - name: Build
-        run: gatsby build
+      - name: Test
+        run: yarn build
 
       - name: Merge
         uses: pascalgn/automerge-action@v0.12.0
@@ -26,6 +31,10 @@ jobs:
           MERGE_LABELS: ''
           MERGE_METHOD: 'squash'
           MERGE_FORKS: 'false'
-          UPDATE_LABELS: ''
+          MERGE_RETRIES: '10'
+          MERGE_RETRY_SLEEP: '200000'
           MERGE_DELETE_BRANCH: 'true'
+          UPDATE_LABELS: ''
           UPDATE_METHOD: 'merge'
+          UPDATE_RETRIES: '10'
+          UPDATE_RETRY_SLEEP: '200000'
