--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "prettier": "2.2.1",
     "pretty-quick": "^3.1.0"
   },
-  "license": "MIT",
+  "license": "0BSD",
   "scripts": {
     "build": "GATSBY_EXPERIMENTAL_PAGE_BUILD_ON_DATA_CHANGES=true gatsby build --log-pages",
     "develop": "gatsby develop",
