--- a/websites/marscollective.co/package.json
+++ b/websites/marscollective.co/package.json
@@ -5,6 +5,7 @@
     "@styled-icons/boxicons-logos": "^10.18.0",
     "@styled-icons/boxicons-regular": "^10.18.0",
     "@styled-icons/remix-line": "^10.18.0",
+    "autoprefixer": "^10.1.0",
     "babel-plugin-styled-components": "^1.12.0",
     "gatsby": "^2.28.1",
     "gatsby-image": "^2.7.0",
@@ -16,6 +17,7 @@
     "gatsby-plugin-netlify-cms": "^4.6.0",
     "gatsby-plugin-no-sourcemaps": "^2.5.0",
     "gatsby-plugin-offline": "^3.6.0",
+    "gatsby-plugin-postcss": "^3.3.0",
     "gatsby-plugin-react-helmet": "^3.6.0",
     "gatsby-plugin-react-helmet-canonical-urls": "^1.4.0",
     "gatsby-plugin-react-svg": "^3.0.0",
@@ -33,13 +35,17 @@
     "mailgun-js": "^0.22.0",
     "netlify-cms-app": "^2.14.4",
     "netlify-plugin-gatsby-cache": "^0.3.2",
+    "postcss": "^8.2.1",
     "prop-types": "^15.7.2",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-headroom": "^3.1.0",
     "react-helmet": "^6.1.0",
     "react-tabs": "^3.1.1",
-    "styled-components": "^5.2.1"
+    "styled-components": "^5.2.1",
+    "tailwindcss": "^2.0.2",
+    "typeface-baloo-2": "^1.1.13",
+    "typeface-rubik": "^1.1.13"
   },
   "devDependencies": {
     "husky": "^4.3.5",
