--- a/websites/marscollective.co/package.json
+++ b/websites/marscollective.co/package.json
@@ -41,6 +41,7 @@
     "react-dom": "^16.14.0",
     "react-headroom": "^3.1.0",
     "react-helmet": "^6.1.0",
+    "react-icons": "^4.1.0",
     "react-tabs": "^3.1.1",
     "styled-components": "^5.2.1",
     "tailwindcss": "^2.0.2",
