--- a/packages/deimos/package.json
+++ b/packages/deimos/package.json
@@ -4,17 +4,16 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
-    "gatsby": "2.28.2",
-    "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "gatsby": "^2.29.0",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0"
   },
   "peerDependencies": {
-    "gatsby": "^2.28.2",
-    "react": "^16.14.0 || ^17.0.0",
-    "react-dom": "^16.14.0 || ^17.0.0"
+    "gatsby": "^2.29.0",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0"
   },
   "dependencies": {
-    "@marscollective/gatsby-theme-core": "^0.2.3",
-    "@marscollective/phobos": "0.0.0-alpha.1"
+    "@marscollective/gatsby-theme-core": "^0.2.3"
   }
 }
