--- a/packages/deimos/package.json
+++ b/packages/deimos/package.json
@@ -14,6 +14,12 @@
     "react-dom": "^16.14.0"
   },
   "dependencies": {
-    "@marscollective/gatsby-theme-core": "^0.2.3"
+    "@marscollective/gatsby-theme-core": "^0.2.3",
+    "autoprefixer": "^10.1.0",
+    "gatsby-plugin-postcss": "^3.4.0",
+    "postcss": "^8.2.1",
+    "tailwindcss": "^2.0.2",
+    "typeface-baloo-2": "^1.1.13",
+    "typeface-rubik": "^1.1.13"
   }
 }
