--- a/packages/deimos/package.json
+++ b/packages/deimos/package.json
@@ -18,6 +18,7 @@
     "autoprefixer": "^10.1.0",
     "gatsby-plugin-postcss": "^3.4.0",
     "postcss": "^8.2.1",
+    "prop-types": "^15.7.2",
     "tailwindcss": "^2.0.2",
     "typeface-baloo-2": "^1.1.13",
     "typeface-rubik": "^1.1.13"
