feat: Add i18next

--- a/packages/deimos/package.json
+++ b/packages/deimos/package.json
@@ -18,10 +18,13 @@
   "dependencies": {
     "@emotion/react": "^11.1.2",
     "@emotion/styled": "^11.0.0",
-    "@marscollective/gatsby-theme-core": "^0.2.3",
+    "@marscollective/gatsby-theme-core": "^0.2.5",
     "gatsby-plugin-alias-imports": "^1.0.5",
     "gatsby-plugin-emotion": "^5.1.0",
+    "gatsby-plugin-intl": "^0.3.3",
+    "i18next": "^19.8.4",
     "prop-types": "^15.7.2",
+    "react-netlify-forms": "^1.2.0",
     "tailwindcss": "^2.0.2",
     "twin.macro": "^2.0.7",
     "typeface-baloo-2": "^1.1.13",
