--- a/websites/marscollective.co/package.json
+++ b/websites/marscollective.co/package.json
@@ -1,21 +1,18 @@
 {
   "name": "marscollective.co",
-  "version": "2.0.0-alpha.1",
+  "version": "1.0.0",
+  "private": true,
+  "scripts": {
+    "build": "GATSBY_EXPERIMENTAL_PAGE_BUILD_ON_DATA_CHANGES=true gatsby build --log-pages",
+    "dev": "gatsby develop",
+    "serve": "gatsby serve",
+    "clean": "gatsby clean",
+    "deploy": "yarn build && netlify deploy -p"
+  },
   "dependencies": {
     "@marscollective/deimos": "0.0.1",
     "gatsby": "^2.29.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0"
-  },
-  "license": "0BSD",
-  "scripts": {
-    "build": "GATSBY_EXPERIMENTAL_PAGE_BUILD_ON_DATA_CHANGES=true gatsby build --log-pages",
-    "dev": "gatsby develop",
-    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md,yml}\"",
-    "start": "gatsby develop",
-    "serve": "gatsby serve",
-    "clean": "gatsby clean",
-    "stage": "netlify build && netlify deploy",
-    "deploy": "yarn stage -p"
   }
 }
