feat: Still working 😴

--- a/websites/marscollective.co/content/metadata/index.yaml
+++ b/websites/marscollective.co/content/metadata/index.yaml
@@ -4,7 +4,7 @@ desc:
   en: A collective of creative minds located in Brazil with an international mindset.
   es: Un colectivo de mentes creativas localizado en Brasil, con una mentalidad internacional.
   pt: Um coletivo de mentes criativas localizado no Brasil com um mindset internacional.
-phone: +55 45 991328593
+phone: +55 45 99132-8593
 email: hi@marscollective.co
 siteUrl: https://marscollective.co
 favicon: favicon.png
