--- a/packages/deimos/package.json
+++ b/packages/deimos/package.json
@@ -24,6 +24,7 @@
     "gatsby-plugin-intl": "^0.3.3",
     "i18next": "^19.8.4",
     "prop-types": "^15.7.2",
+    "react-icons": "^4.1.0",
     "react-netlify-forms": "^1.2.0",
     "tailwindcss": "^2.0.2",
     "twin.macro": "^2.0.7",
