--- a/packages/deimos/package.json
+++ b/packages/deimos/package.json
@@ -22,6 +22,7 @@
     "gatsby-plugin-alias-imports": "^1.0.5",
     "gatsby-plugin-emotion": "^5.1.0",
     "gatsby-plugin-intl": "^0.3.3",
+    "gatsby-plugin-scroll-reveal": "^0.0.7",
     "i18next": "^19.8.4",
     "prop-types": "^15.7.2",
     "react-icons": "^4.1.0",
