--- a/packages/deimos/package.json
+++ b/packages/deimos/package.json
@@ -19,6 +19,7 @@
     "@emotion/react": "^11.1.2",
     "@emotion/styled": "^11.0.0",
     "@marscollective/gatsby-theme-core": "^0.2.5",
+    "gatsby-background-image": "^1.3.1",
     "gatsby-plugin-alias-imports": "^1.0.5",
     "gatsby-plugin-emotion": "^5.1.0",
     "gatsby-plugin-intl": "^0.3.3",
