--- a/packages/deimos/package.json
+++ b/packages/deimos/package.json
@@ -21,6 +21,7 @@
     "@marscollective/gatsby-theme-core": "^0.2.5",
     "gatsby-background-image": "^1.3.1",
     "gatsby-plugin-alias-imports": "^1.0.5",
+    "gatsby-plugin-anchor-links": "^1.2.0",
     "gatsby-plugin-emotion": "^5.1.0",
     "gatsby-plugin-intl": "^0.3.3",
     "gatsby-plugin-scroll-reveal": "^0.0.7",
