--- a/packages/deimos/package.json
+++ b/packages/deimos/package.json
@@ -24,6 +24,7 @@
     "gatsby-plugin-anchor-links": "^1.2.0",
     "gatsby-plugin-emotion": "^5.1.0",
     "gatsby-plugin-intl": "^0.3.3",
+    "gatsby-plugin-react-helmet-canonical-urls": "^1.4.0",
     "gatsby-plugin-scroll-reveal": "^0.0.7",
     "i18next": "^19.8.4",
     "prop-types": "^15.7.2",
