--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,12 +1,12 @@
-name: Test and merge
+name: Test
 on:
   pull_request:
     branches:
       - main
 
 jobs:
-  test-and-merge:
-    name: Test and merge
+  test:
+    name: Test
     runs-on: ubuntu-latest
 
     steps:
@@ -23,18 +23,3 @@ jobs:
 
       - name: Test
         run: yarn build
-
-      - name: Merge
-        uses: pascalgn/automerge-action@v0.12.0
-        env:
-          GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
-          MERGE_LABELS: ''
-          MERGE_METHOD: 'squash'
-          MERGE_FORKS: 'false'
-          MERGE_RETRIES: '10'
-          MERGE_RETRY_SLEEP: '200000'
-          MERGE_DELETE_BRANCH: 'true'
-          UPDATE_LABELS: ''
-          UPDATE_METHOD: 'merge'
-          UPDATE_RETRIES: '10'
-          UPDATE_RETRY_SLEEP: '200000'
