--- a/websites/links.marscollective.co/package.json
+++ b/websites/links.marscollective.co/package.json
@@ -10,9 +10,9 @@
     "deploy": "yarn build && netlify deploy -p"
   },
   "dependencies": {
-    "@marscollective/gatsby-theme-link-free": "^0.2.3",
-    "gatsby": "2.28.2",
-    "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "@marscollective/gatsby-theme-link-free": "^0.2.5",
+    "gatsby": "^2.29.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   }
 }
