--- a/theme/package.json
+++ b/theme/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@marscollective/deimos",
+  "name": "@marscollective/theme",
   "author": "Mars Collective <hi@marscollective.co>",
   "version": "2.0.1",
   "main": "index.js",
