--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,5 @@
 {
-  "packages": ["packages/*, websites/*"],
+  "packages": ["packages/*"],
   "version": "independent",
   "useWorkspaces": true,
   "command": {
