--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "0BSD",
   "private": true,
   "scripts": {
-    "dev": "gatsby dev",
+    "dev": "gatsby develop",
     "build": "GATSBY_EXPERIMENTAL_PAGE_BUILD_ON_DATA_CHANGES=true gatsby build --log-pages",
     "clean": "gatsby clean",
     "deploy": "yarn build && netlify deploy -p",
@@ -22,9 +22,11 @@
     "gatsby-plugin-anchor-links": "^1.2.0",
     "gatsby-plugin-emotion": "^5.1.0",
     "gatsby-plugin-intl": "^0.3.3",
+    "gatsby-plugin-netlify-cms": "^4.7.0",
     "gatsby-plugin-react-helmet-canonical-urls": "^1.4.0",
     "gatsby-plugin-scroll-reveal": "^0.0.7",
     "i18next": "^19.8.4",
+    "netlify-cms-app": "^2.14.6",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
