--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "name": "marscollective.co",
   "author": "Mars Collective <hi@marscollective.co>",
   "version": "2.0.0",
-  "main": "index.js",
   "license": "0BSD",
   "private": true,
   "scripts": {
     "dev": "gatsby develop",
     "build": "GATSBY_EXPERIMENTAL_PAGE_BUILD_ON_DATA_CHANGES=true gatsby build --log-pages",
+    "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "deploy": "yarn build && netlify deploy -p",
+    "stage": "yarn build && netlify deploy",
+    "deploy": "yarn stage -p",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md,mdx,yaml,yml}\""
   },
   "dependencies": {
@@ -25,6 +26,7 @@
     "gatsby-plugin-netlify-cms": "^4.7.0",
     "gatsby-plugin-react-helmet-canonical-urls": "^1.4.0",
     "gatsby-plugin-scroll-reveal": "^0.0.7",
+    "gatsby-transformer-remark-frontmatter": "^0.1.0",
     "i18next": "^19.8.4",
     "netlify-cms-app": "^2.14.6",
     "prop-types": "^15.7.2",
