--- a/package.json
+++ b/package.json
@@ -14,28 +14,28 @@
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md,mdx,yaml,yml}\""
   },
   "dependencies": {
-    "@emotion/react": "^11.1.2",
-    "@emotion/styled": "^11.0.0",
     "@marscollective/gatsby-theme-core": "^0.2.5",
+    "autoprefixer": "^10.1.0",
     "gatsby": "^2.29.1",
     "gatsby-background-image": "^1.3.1",
     "gatsby-plugin-alias-imports": "^1.0.5",
     "gatsby-plugin-anchor-links": "^1.2.0",
-    "gatsby-plugin-emotion": "^5.1.0",
     "gatsby-plugin-intl": "^0.3.3",
     "gatsby-plugin-netlify-cms": "^4.7.0",
+    "gatsby-plugin-postcss": "^3.4.0",
     "gatsby-plugin-react-helmet-canonical-urls": "^1.4.0",
     "gatsby-plugin-scroll-reveal": "^0.0.7",
     "gatsby-transformer-remark-frontmatter": "^0.1.0",
     "i18next": "^19.8.4",
     "netlify-cms-app": "^2.14.6",
+    "postcss": "^8.2.1",
+    "postcss-nested": "^5.0.3",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
     "react-netlify-forms": "^1.2.0",
     "tailwindcss": "^2.0.2",
-    "twin.macro": "^2.0.7",
     "typeface-baloo-2": "^1.1.13",
     "typeface-rubik": "^1.1.13"
   },
@@ -43,12 +43,6 @@
     "@babel/core": "^7.12.10",
     "babel-loader": "^8.2.2",
     "prettier": "2.2.1"
-  },
-  "babelMacros": {
-    "twin": {
-      "config": "src/theme/tailwind.config.js",
-      "preset": "emotion"
-    }
   },
   "prettier": {
     "trailingComma": "none",
