--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@marscollective/gatsby-theme-core": "^0.2.5",
     "autoprefixer": "^10.1.0",
+    "date-fns-tz": "^1.0.12",
     "gatsby": "^2.29.1",
     "gatsby-background-image": "^1.3.1",
     "gatsby-plugin-alias-imports": "^1.0.5",
