--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gatsby-background-image": "^1.3.1",
     "gatsby-plugin-alias-imports": "^1.0.5",
     "gatsby-plugin-anchor-links": "^1.2.0",
+    "gatsby-plugin-client-side-redirect": "^1.1.0",
     "gatsby-plugin-intl": "^0.3.3",
     "gatsby-plugin-netlify-cms": "^4.7.0",
     "gatsby-plugin-postcss": "^3.4.0",
